@@ -5,6 +5,7 @@ munin (CVS)
     Deb#296645).
   * Main: Better handling of broken connections (Deb#298108).
   * Main: HTML cleanup (Deb#296676).
+  * Main: Re-enable width/height attributes to img tags.
   * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
   * Plugins: linux/if* now treats ra* interfaces as wireless.
   * Plugins: minor bugfix in generic/bind9.
